--- a/final/app/views/layouts/application.html.erb
+++ b/final/app/views/layouts/application.html.erb
@@ -12,18 +12,18 @@
         <li><a href="/">Home</a></li>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="/">Guided Hunts<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Info</a></li>
-            <li><a href="#">Requierments</a></li>
-            <li><a href="#">Open Reservations</a></li>
+            <li><a href="/hunt">Info</a></li>
+            <li><a href="/huntr">Requierments</a></li>
+            <li><a href="/hunto">Open Reservations</a></li>
           </ul>
         </li>
 
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="/">Summer Resort<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Info</a></li>
-            <li><a href="#">Activities</a></li>
-            <li><a href="#">Requierments</a></li>
-            <li><a href="#">Open Reservations</a></li>
+            <li><a href="resort">Info</a></li>
+            <li><a href="resorta">Activities</a></li>
+            <li><a href="resortr">Requierments</a></li>
+            <li><a href="resorto">Open Reservations</a></li>
           </ul>
         </li>
         
@@ -38,7 +38,7 @@
         <% if user_signed_in? %>
           <ul class="nav navbar-nav navbar-right">
             <li><p class="nav navbar-text">Logged in as: <%= current_user.name %></p></li>
-            <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+            <li><a href="/users/sign_out" data-method="delete" rel="nofollow">Sign Out</a> </li>
           </ul>
         <% else %>
           <ul class="nav navbar-nav navbar-right"> 
