--- a/final/app/views/hunts/info.html.erb
+++ b/final/app/views/hunts/info.html.erb
@@ -1,1 +1,17 @@
-<h1> Info about guided hunts </h1>
+<h1> Information </h1>
+
+<h3> The property </h3>
+
+<h3> The hunting </h3>
+
+<%= image_tag root_url + "/images/hunting.JPG", size: "500x400" %>
+
+<h3> Addition options </h3>
+
+<h4> Pheasent </h4>
+<p> note: options are only avaliable from november 14 to december 27 </p>
+<%= image_tag root_url + "/images/pheasent.jpg" %>
+ 
+<h4> Dove </h4>
+
+<%= image_tag root_url + "/images/dove.jpg" %>
