--- a/final/app/views/resorts/activities.html.erb
+++ b/final/app/views/resorts/activities.html.erb
@@ -1,1 +1,39 @@
-<h1> activities at summer resort </h1>
+<h1> Activities </h1>
+
+<h3> ATVing </h3>
+<div class=image>
+    <%= image_tag root_url + "/images/atv.JPG", size: "325x300" %>
+    <ul>
+      <li> <p> 3 atvs and 2 argos to ride </p> </li>
+      <li> <p> over 300 arces to explore </p> </li>
+      <li> <p> note: must be 16 or older to operate vechicles </li> <p>
+    </ul>
+</div>
+<br style="clear:both">
+<h3> Jetsking </h3>
+<div class=image>
+  <%= image_tag root_url + "/images/jetski.jpg", size: "325x300" %>
+  <ul>
+    <li> powerful 3 seater jetski to drive </li>
+    <li> visit the ocean for huge waves or stay in the river for a relaxing ride </li>
+    <li> note: must be 18 years or older to drive jetski </li>
+  </ul>
+</div>
+<br style="clear:both">
+<h3> Fishing </h3>
+<div class=image>
+  <%= image_tag root_url + "/images/fishing.jpg", size: "325x300" %>
+  <ul>
+    <li> Enjoy a relaxing day of fishing right off the dock </li>
+    <li> Fish for stripers, sturgeon, and split tail </li>
+    <li> note: bait not included in package </li>
+  </ul>
+</div>
+<br style="clear:both">
+<h3> Water Sports </h3>
+<div class=image>
+  <%= image_tag root_url + "/images/wakeboard.jpg", size: "325x300" %>
+  <ul>
+    <li> wakeboard, ski, or tube in the river </li>
+  </ul>
+</div>
