--- a/final/app/views/resorts/info.html.erb
+++ b/final/app/views/resorts/info.html.erb
@@ -1,1 +1,5 @@
-<h1> info about summer resort </h1>
+<h1> Information </h1>
+
+<h3> The property </h3>
+
+  <%= image_tag root_url + "/images/house.jpg", size: "600x500" %>
