--- a/final/app/views/hunts/requierments.html.erb
+++ b/final/app/views/hunts/requierments.html.erb
@@ -1,3 +1,7 @@
 <h1> Requirements </h1>
 
-
+<ul>
+  <li> Each hunter must have a vaild hunter licsense of the current year </li>
+  <li> Hunters will be expected to bring their own equipment, including guns and ammo </li>
+  <li> Hunters will be split into groups of 2 or three. Each group must have a member of 21 years or older </li>
+</ul>
