--- a/final/app/views/layouts/application.html.erb
+++ b/final/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
           </ul>
         </li>
         
-        <li><a href="contact">Contact Us</a></li>
+        <li><a href="/contact">Contact Us</a></li>
         <% if user_signed_in? %>
           <li><a href="/user/reservations">My Reservations</a></li>
         <% end %>
