--- a/img/app/assets/stylesheets/images.scss
+++ b/img/app/assets/stylesheets/images.scss
@@ -2,17 +2,4 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-div.item {
-    vertical-align: top;
-    display: inline-block;
-    text-align: center;
-    width: 120px;
-}
-img {
-    width: 100px;
-    height: 100px;
-    background-color: grey;
-}
-.caption {
-    display: block;
-}
+.image img {float:left}
