edited views, added readme

--- a/final/app/views/hunts/info.html.erb
+++ b/final/app/views/hunts/info.html.erb
@@ -1,17 +1,36 @@
 <h1> Information </h1>
 
 <h3> The property </h3>
+<div class=image>
+  <%= image_tag root_url + "/images/property.jpg", size: "500x400" %>
+  <span> With over 300 acres and 9 blinds to hunt, goldeneye resort has a long history of succeful hunts. </span>
+</div>
+
+<br style="clear:both">
 
 <h3> The hunting </h3>
+<div class=image>
+  <%= image_tag root_url + "/images/hunting.JPG", size: "500x400" %>
+  <span>Averaging over 500 birds a year, everyone gets a shot at goldeneye resort </span>
+</div>
 
-<%= image_tag root_url + "/images/hunting.JPG", size: "500x400" %>
+<br style="clear:both">
 
 <h3> Addition options </h3>
-
-<h4> Pheasent </h4>
 <p> note: options are only avaliable from november 14 to december 27 </p>
-<%= image_tag root_url + "/images/pheasent.jpg" %>
- 
-<h4> Dove </h4>
 
-<%= image_tag root_url + "/images/dove.jpg" %>
+<h4> Pheasent</h4>
+<div class=image>
+  <%= image_tag root_url + "/images/pheasent.jpg" %>
+  <span> Pheasent! </span>
+</div>
+
+<br style="clear:both">
+
+<h4> Dove </h4>
+<div class=image>
+  <%= image_tag root_url + "/images/dove.jpg" %>
+  <span> Dove! </span>
+</div>
+<br style="clear:both">
+
