--- a/final/app/views/layouts/application.html.erb
+++ b/final/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="/">Guided Hunts<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/hunt">Info</a></li>
-            <li><a href="/huntr">Requierments</a></li>
+            <li><a href="/huntr">Requirements</a></li>
             <li><a href="/hunto">Open Reservations</a></li>
           </ul>
         </li>
@@ -22,7 +22,7 @@
           <ul class="dropdown-menu">
             <li><a href="/resort">Info</a></li>
             <li><a href="/resorta">Activities</a></li>
-            <li><a href="/resortr">Requierments</a></li>
+            <li><a href="/resortr">Requirements</a></li>
             <li><a href="/resorto">Open Reservations</a></li>
           </ul>
         </li>
