updated viwes, final push

--- a/final/app/views/home/index.html.erb
+++ b/final/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <h1> Antioch Goldeneye Resort </h1>
 
-<%= image_tag root_url + "/images/suisun house.JPG" %>
 
+<p> Welcome to Antioch Goldeneye Resort. Whether you are here for a great hunt or just a relaxing weekend, consider a stay at Goldeneye Resort. We have 300 acres of marshland, and 9 blinds to hunt in. But theres always more to do. We have 3 atvs, 2 argos, a canoe, a jetski, and even more toys to play with. Young or old, anyone can have a great time at Goldeneye Resort. </p>
 
-
+<%= image_tag root_url + "images/house.jpg", size: "1250x900" %>
