--- a/final/app/views/hunts/requierments.html.erb
+++ b/final/app/views/hunts/requierments.html.erb
@@ -1,6 +1,9 @@
 <h1> Requirements </h1>
 
 <ul>
+  <li> 4 Hunters or more must commit to reservation before it will be reserved </li>
+  <li> Price is $1000 per hunter </li>
+  <li> Additional options are $250 per hunter </li>
   <li> Each hunter must have a vaild hunter licsense of the current year </li>
   <li> Hunters will be expected to bring their own equipment, including guns and ammo </li>
   <li> Hunters will be split into groups of 2 or three. Each group must have a member of 21 years or older </li>
