--- a/final/app/views/resorts/info.html.erb
+++ b/final/app/views/resorts/info.html.erb
@@ -1,5 +1,5 @@
 <h1> Information </h1>
 
-<h3> The property </h3>
+<p> With two two story houses and plenty of beds, everyone can come visit Goldeneye Resort. Theres plenty to explore, with 300 acres of land. Or even if you want to kick back and watch the game, we got you covered. </p>
 
-  <%= image_tag root_url + "/images/house.jpg", size: "600x500" %>
+  <%= image_tag root_url + "/images/suisun house.JPG", size: "600x500" %>
