--- a/final/app/views/resorts/requierments.html.erb
+++ b/final/app/views/resorts/requierments.html.erb
@@ -1,1 +1,8 @@
-<h1> Requirements for summer resort </h1>
+<h1> Requirements  </h1>
+
+<ul>
+  <li> Minimum 4 persons per reservation </li>
+  <li> Maximum 12 persons per reservation </li>
+  <li> Price is 1000 per adult, 750 per child of 13 years or younger </li>
+  <li> All children of 13 or younger must be accompanied by an adult </li>
+</ul>
